# rust_tf2_bot_detector

./: .gitignore  Cargo.toml  LICENSE  README.md  rule_list.json
src/: console_log.rs  console_log_parser.rs  console_log_parser_line_based.rs  log_file_watcher.rs  main.rs  main_window.rs  player.rs  preferences.rs  rcon.rs  rconprompt.rs  rules.rs  rust_bot_detector.rs  steam_api.rs  tf2process.rs
