[package]
name = "rust_tf2_bot_detector"
version = "0.1.0"
authors = ["Tommy Hallgren <thallgren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rconprompt"
path ="src/rconprompt.rs"

[[bin]]
name = "rust_bot_detector"
path ="src/rust_bot_detector.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
# iced = "0.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
structopt = "0.3"